--- a/team-builder/src/App.css
+++ b/team-builder/src/App.css
@@ -1,33 +1,62 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 40vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.theMember {
+    background: rgb(247, 240, 230);
+    width: 40%;
+    margin: 5px auto;
+    border-radius: 5%;
+    padding: 2px;
+}
+
+.memberTitle {
+    padding: 10px;
+}
+
+p {
+    padding: 10px;
+    margin: 8px 8px 8px 8px;
+}
+
+.theFormName,
+.theFormEmail,
+.theFormRole {
+    padding: 5px;
+    margin: 5px;
+}
+
+.form-button {
+    background: darkslategray;
+    color: white;
 }
